# skyhook-ceph

./: .gitignore  .gitmodules  .gitmodules_BACKUP_2912  CMakeLists.txt  ceph.spec.in  install-deps.sh  make-dist  run-make-check.sh
admin/: doc-requirements.txt
cmake/modules/: BuildBoost.cmake
debian/: ceph-mon.install  ceph-osd.install  changelog  control  rules
doc/man/8/: CMakeLists.txt
doc/mgr/: prometheus.rst
doc/rados/configuration/: auth-config-ref.rst
doc/rados/man/: index.rst
qa/standalone/: ceph-helpers.sh
qa/standalone/erasure-code/: test-erasure-eio.sh
qa/standalone/mon/: osd-pool-create.sh
qa/standalone/scrub/: osd-scrub-repair.sh  osd-scrub-snaps.sh
qa/suites/kcephfs/recovery/tasks/: failover.yaml
qa/suites/krbd/singleton/tasks/: rbd_xfstests.yaml
qa/suites/rados/multimon/tasks/: mon_clock_with_skews.yaml
qa/suites/rgw/hadoop-s3a/: s3a-hadoop.yaml
qa/tasks/: ceph_deploy.py  radosgw_admin.py  rbd.py  rgw.py  s3a_hadoop.py  swift.py
qa/tasks/cephfs/: cephfs_test_case.py  filesystem.py  test_client_recovery.py  test_data_scan.py  test_misc.py
qa/workunits/rados/: test_envlibrados_for_rocksdb.sh
qa/workunits/rbd/: rbd_mirror.sh  rbd_mirror_helpers.sh  run_devstack_tempest.sh
src/: CMakeLists.txt  ceph_fuse.cc  ceph_mgr.cc  ceph_mon.cc  ceph_osd.cc
src/auth/: Auth.h  AuthAuthorizeHandler.h
src/auth/cephx/: CephxProtocol.cc  CephxProtocol.h  CephxServiceHandler.cc  CephxSessionHandler.cc
src/ceph-detect-init/wheelhouse/: discover-0.4.0-py2-none-any.whl  discover-0.4.0-py3-none-any.whl  distlib-0.3.0-py2-none-any.whl  distlib-0.3.0-py3-none-any.whl  pytest-5.4.1-py3-none-any.whl  scandir-1.10.0-cp27-cp27mu-linux_x86_64.whl  testrepository-0.0.20-py2-none-any.whl  testtools-2.4.0-py2.py3-none-any.whl  tox-3.14.6-py2.py3-none-any.whl
src/ceph-disk/wheelhouse/: configobj-5.0.6-py2-none-any.whl  configobj-5.0.6-py3-none-any.whl  coverage-5.0.4-cp27-cp27mu-manylinux1_x86_64.whl  coverage-5.0.4-cp36-cp36m-manylinux1_x86_64.whl  coverage-5.1-cp27-cp27mu-manylinux1_x86_64.whl  coverage-5.1-cp36-cp36m-manylinux1_x86_64.whl  discover-0.4.0-py2-none-any.whl  filelock-3.0.12-py2-none-any.whl  importlib_resources-1.4.0-py2.py3-none-any.whl  mock-4.0.2-py3-none-any.whl  python_subunit-1.4.0-py2.py3-none-any.whl  testrepository-0.0.20-py3-none-any.whl
src/ceph-volume/ceph_volume/: configuration.py  main.py  process.py
src/ceph-volume/ceph_volume/devices/lvm/: activate.py  prepare.py
src/ceph-volume/ceph_volume/tests/devices/lvm/: test_prepare.py
src/ceph-volume/ceph_volume/util/: prepare.py
src/client/: Client.cc  Client.h  Inode.cc  Inode.h  MetaRequest.h  SyntheticClient.cc  fuse_ll.cc
src/cls/: CMakeLists.txt
src/cls/rbd/: cls_rbd.cc  cls_rbd_types.h
src/cls/rgw/: cls_rgw_client.cc
src/cls/tabular/: cls_tabular.cc  cls_tabular_utils.cc  cls_tabular_utils.h
src/cls/user/: cls_user.cc
src/common/: Graylog.h  common_init.cc  pick_address.h  sstring.hh
src/dmclock/: CMakeLists.txt
src/dmclock/cmake/modules/: BuildGTest.cmake
src/dmclock/sim/: CMakeLists.txt
src/dmclock/support/src/: debug.h  heap.h  indirect_intrusive_heap.h  intrusive_heap.h  profile.h  run_every.cc  run_every.h
src/include/: rados.h  util.h
src/librbd/: CMakeLists.txt
src/librbd/image/: SetSnapRequest.cc
src/mon/: MgrStatMonitor.h
src/rgw/: rgw_coroutine.h
src/test/: perf_counters.cc
